Fix BlobMemoryControllerTest.OnMemoryPressure

If TimeTicks::Now returns number close to 30 seconds on the first
call then test would fail. So, check if last_eviction_time_ is 0.

BUG=727443

Review-Url: https://codereview.chromium.org/2918523003
Cr-Commit-Position: refs/heads/master@{#476050}

Former-commit-id: 95db2e01abad611ea87edae5a036e109a6085328